# data-connector

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml  run-test.yml
src/: __init__.py  cloud_service.py
tests/: test_cloud_service.py
