[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "dataco"
version = "0.0.2"
description = "tools to read, write, update dataframe to storage services"
readme = "README.md"
authors = [{ name = "Sang Dinh", email = "sxuan29@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas", "boto3"
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/sang-d/data-connector"
